...
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:padding="8dp">

        <EditText
            android:id="@+id/write_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_toLeftOf="@+id/comment_post"
            android:layout_toRightOf="@id/comment_profile_image"
            android:background="@android:color/transparent"
            android:hint="Write a comment..." />

        <TextView
            android:id="@+id/comment_post"
...
