...
                                    app:civ_border_color="#5ca9ff"
                                    app:civ_border_width="2dp" />

                                <androidx.appcompat.widget.AppCompatButton
                                    android:layout_width="100dp"
                                    android:layout_height="25dp"
                                    android:id="@+id/follow_button_profile_fragment"
                                    android:background="@drawable/btn_bg"
                                    android:layout_alignParentBottom="true"
                                    android:layout_margin="20dp"
                                    android:textColor="@color/white"/>

                                <androidx.appcompat.widget.AppCompatButton
...
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/profile_linear_layout_2"
                        android:layout_marginBottom="50dp">

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/profile_fragment_recycler_view"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />


                    </RelativeLayout>
                </RelativeLayout>
...
